2001-07-21  Darin Adler  <darin@bentspoon.com>

	* README: Update cvs tags for gnome-vfs, librsvg, eel.

2001-07-21  Anders Carlsson  <andersca@gnome.org>

	* components/help/Makefile.am:
	* components/sample/Makefile.am:
	* libnautilus-adapter/Makefile.am:
	* libnautilus-private/Makefile.am:
	* libnautilus/Makefile.am:
	Remove multiple references to $(NAUTILUS_PRIVATE_LIBS) since 
	having multiple references makes linking very slow with libtool 1.4.

2001-07-20  Maciej Stachowiak  <mjs@eazel.com>

	Fixed bugzilla.eazel.com bug 7015 (Item count not updated when
	copying an empty folder to another).
	
	* libnautilus-private/nautilus-directory-async.c:
	(nautilus_file_invalidate_count_and_mime_list): New function to
	invalidate a directory's item count and item mime list given it's
	corresponding NautilusFile object.
	(nautilus_directory_invalidate_count_and_mime_list): Reimplemented
	in terms of the above.

	* libnautilus-private/nautilus-file-private.h:
	Prototype the new function.

	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_notify_files_added): If the NautilusDirectory
	for a directory into which files are being moved is not being
	monitored but the NautilusFile is, make sure to invalidate it's
	item count and mime list. This is the corner case that bug 7015
	was tickling.

2001-07-20  Andy Hertzfeld  <andy@differnet.com>

	fixed problem that the reset property was not localizable, since
	it used an image that contained text.  Fixed, by removing the
	text from the image and compositing it on the fly, from a localizable
	string.
	
	* data/patterns/reset.png:
	new version of reset tile without text.
	
	* libnautilus-private/nautilus-customization-data.c:
	(nautilus_customization_data_get_next_element_for_display),
	(add_reset_text), (nautilus_customization_make_pattern_chit):
	composite the reset text on the fly when necessary
	
	* libnautilus-private/nautilus-customization-data.h:
	added a parameter to make_pattern_chit to tell it to draw